# ConfigChecker

./: README.md  requirements.txt  启动WebAPI.bat  迁移原项目基线.bat
ConfigChecker_Rebuild/: README.md  data.db  pyproject.toml  初始化示例数据.bat  启动GUI.bat
ConfigChecker_Rebuild/configchecker/: ai.py  api.py  asset_io.py  baseline_io.py  batch.py  checker.py  cli.py  db.py  gui.py  identify.py  migrate.py  models.py  platform.py  remediation.py  remediation_xlsx.py  report.py  report_csv.py  report_docx.py  report_json.py  report_pdf.py  report_xlsx.py  report_xml.py
ConfigChecker_Rebuild/examples/: baseline_seed.csv
ConfigChecker_Rebuild/reports/: api-smoke_3.csv  api-smoke_3.html  api-smoke_3.xml  final-smoke_4.csv  final-smoke_4.docx  final-smoke_4.html  final-smoke_4.xlsx  final-smoke_4.xml  final-smoke_4_整改台账.md  final-smoke_4_整改台账.xlsx  gui-task_5.csv  gui-task_5.docx  gui-task_5.html  gui-task_5.xlsx  gui-task_5.xml  gui-task_5_整改台账.xlsx  gui-task_6.csv  gui-task_6.docx  gui-task_6.html  gui-task_6.xlsx  gui-task_6.xml  gui-task_6_整改台账.xlsx  smoke2_2.csv  smoke2_2.docx  smoke2_2.html  smoke2_2.xlsx  smoke2_2.xml  smoke2_2_整改台账.md  smoke2_2_整改台账.xlsx  smoke_1.csv  smoke_1.docx  smoke_1.html  smoke_1.xlsx  ~$i-task_5.docx
ConfigChecker_Rebuild/templates/: report.html
ConfigChecker_Rebuild/uploads/: huawei.cfg
