[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configchecker-rebuild"
version = "0.1.0"
description = "ConfigChecker rebuilt maintainable compliance configuration checker"
requires-python = ">=3.10"
dependencies = [
  "sqlmodel>=0.0.22",
  "jinja2>=3.1",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "reportlab>=4.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "python-multipart>=0.0.9",
  "PyQt6>=6.4",
]

[project.scripts]
configchecker = "configchecker.cli:main"
configchecker-gui = "configchecker.gui:main"
